local-self-signed/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: container-registry
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32000
