local-self-signed/registry-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: container-registry
spec:
  type: NodePort
  selector:
    app: registry-ui
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32001
